conquer/parser.py
"""ConQuer-92 surface parser.

The grammar is appendix B of the report (arXiv:2105.11926;
conquer/conquer-2026-grammar.ebnf is the grammar as implemented), and the
keyword table there is reproduced below verbatim. The parser is schema-driven, as
appendix B requires: a mix-fix predicate verbalisation is only a verb part plus an
information descriptor, and which fact type a verb part names can only be decided by looking
at the schema and at what the path has reached so far.

Report section 7 calls this out as an ambiguous grammar. This parser resolves ambiguity by
filtering candidate fact types against the current head's type, then against the type named
next, and raises Ambiguous when more than one candidate survives -- it never guesses silently.

Supported subset (see conquer/README.md for the full list of what is not here):
    LIST <items> FROM <descriptor>          bare <descriptor> also parses
    Type, Type var, Type: denotation        type specification with instance reference
    <path> <verb part> <path>               mix-fix predicate verbalisation
    AND ALSO / OR OTHERWISE / BUT NOT       FrSetOper
    UNITED WITH / INTERSECTED WITH / MINUS  SetOper
    WHICH ARE ALL IN / THAT INCLUDES ALL / MATCHING ALL / EXCLUDING
    = <> < <= > >= and their word forms     ValueComp
    WHERE <condition>, AND / OR / NOT / SOME
    THE COUNT OF / SUM OF / MINIMUM / MAXIMUM / AVERAGE, and DISTINCT COUNT/SUM
    [ ... ] sub-expression, ( ... ) grouping
    DISTINCT, ORDERED [WITH] ...
"""

from __future__ import annotations

import os
import re
import sys
from dataclasses import dataclass, field
from typing import List, Optional, Tuple

sys.path.insert(0, os.path.dirname(os.path.dirname(os.path.abspath(__file__))))
from model.ccm import Index                                            # noqa: E402


class ParseError(Exception):
    pass


class MacroError(ParseError):
    """A macro invocation that cannot be expanded: recursive, or the wrong arity. Raised
    through the projection-list retry, which swallows ordinary parse errors."""


class Ambiguous(ParseError):
    pass


class Judgement(ParseError):
    """A refusal that is a claim about *meaning* rather than a failure to parse: a fan trap,
    a value equated with an instance, a node joined to nothing.

    Its own class because `--permissive` exists to suppress exactly these, and the test that
    holds the compiler to that was matching five hand-copied message fragments -- so the next
    judgement added would have been unmeasured and nothing would have said so. Raised only by
    `Lowering.refuse`."""


# --------------------------------------------------------------------------- AST

@dataclass
class TypeSpec:
    concept: str
    var: Optional[str] = None
    denotation: Optional[object] = None


@dataclass
class RoleSpec:
    """Appendix B.2 <role reference>: naming a role rather than the type that plays it."""
    roles: List[str]
    text: str


@dataclass
class VarRef:
    name: str


@dataclass
class ImplicitHead:
    """The head an operand inherits. `A AND ALSO has B` -- the right operand continues from
    the same head, which is what makes AND ALSO an intersection of fronts (Fr) rather than a
    concatenation."""


@dataclass
class Step:
    """One mix-fix step: a verb part, what follows it, and whether the fact is optional.

    `optional` comes from the OPTIONALLY prefix, which B.2 provides a slot for. It makes the
    traversal an outer join, so the query keeps rows where the fact is absent instead of
    silently dropping them.
    """
    verb: str
    target: object = None
    optional: bool = False


@dataclass
class Filter:
    """A `[ ... ]` sub-expression sitting between path segments (section 6.7)."""
    expr: object


@dataclass
class Seq:
    parts: List[object]


@dataclass
class Binary:
    op: str
    left: object
    right: object


@dataclass
class Compare:
    op: str
    left: object
    right: object


@dataclass
class SetCompare:
    op: str
    left: object
    right: object
    negated: bool = False        # `DOES NOT EQUAL`: the CCM has no notMatch, so wrap in `not`


@dataclass
class Where:
    path: object
    condition: object


@dataclass
class Logical:
    op: str
    operands: List[object]


@dataclass
class Not:
    operand: object


@dataclass
class Some:
    path: object


@dataclass
class Aggregate:
    func: str
    path: object
    distinct: bool = False
    group_by: List[str] = field(default_factory=list)
    # `WITHIN d` is `GROUPED BY d` without the collapse: the same partition, reported beside
    # every row rather than instead of them. conquer-2026 §11.
    windowed: bool = False
    over: Optional[str] = None      # B.2's `<variable> IN`: which attribute is aggregated
    # Only `THE LIST OF` can carry these: it is the one group function whose result is a bag,
    # and a bag is the only result an order or a cut means anything to. Parsed straight after
    # the path, so an ORDERED WITH written after the whole body still orders the whole body.
    ordering: List["OrderItem"] = field(default_factory=list)
    limit: Optional["Limit"] = None
    # `THE PREVIOUS x BY t WITHIN g` -- the key the window is ordered by. Only the row-relative
    # functions carry one: a SUM does not care what order its bag was in, and a LAG is nothing
    # without it. conquer-2026 section 11.
    order_key: object = None
    # A second operand that is not the bag: `THE OBJECT OF v BY k` keys each value, `THE LIST
    # OF x SEPARATED BY ', '` joins the values as text. The bag is still the one thing
    # aggregated; this is a scalar rendered beside it (conquer-2026 section 13).
    extra: object = None
    # `THE RANK OF x ASCENDING`: which way the window is ordered. None is the function's
    # default -- descending, so rank 1 is the largest and percent rank 0 is the largest.
    direction: Optional[str] = None


@dataclass
class Arith:
    """Appendix B.3 <scalar expression>: `a * 100 / b`, `f(x)`."""
    op: str
    left: object
    right: object


@dataclass
class Call:
    name: str
    args: List[object]


@dataclass
class Constant:
    lexical: str
    numeric: bool = False


@dataclass
class SubExpr:
    parts: List[object]


@dataclass
class Named:
    """B.2 <confluence element>: `<information descriptor> AS <variable name>` -- the only
    way to give a computed descriptor, such as a grouped aggregate, a name to project."""
    path: object
    name: str


@dataclass
class Distinct:
    path: object


@dataclass
class Front:
    """Section 6.2's Fr: keep the head, discard the tail. Keyword ONLY."""
    path: object


@dataclass
class OrderItem:
    """One item of B.2's <order list>. `end` is set for the grammar's HEAD and TAIL
    terminals, which name the two distinguished ends of the path result -- section 6.13's
    hd and tl attributes -- rather than a variable bound in the query."""
    key: Optional[str]
    direction: str
    end: Optional[str] = None
    expr: object = None          # a scalar expression, when the key is computed


@dataclass
class Limit:
    """How much of the ordered result to keep.

    ConQuer-92 has no such construct. §6.13 defines only Ω, which sorts and no more, and is
    explicit that ordering "is not a part of the path-expressions themselves"; the grammar's
    HEAD and TAIL are sort *keys* naming the ends of the path, not a row count. So this is an
    extension, and it is sited where Ω is -- outside the algebra, on the LIST statement --
    rather than as a path operator, because a bag has no first element until something orders
    it."""
    count: int
    offset: int = 0
    per: Optional[str] = None     # PER x: the first n within each x, conquer-2026.md §8
    ties: bool = False            # WITH TIES: everything that ranks within n, not n rows


@dataclass
class ConfluenceElement:
    """One side path of a confluence: what to gather, what to call it, where to attach it.

    `ordering` and `limit` are an extension, and are only meaningful on a side path that
    fans out: B.2's <confluence element> has nowhere to put them because a flattened
    confluence gathers at most one value per junction, and one value has no order. Once the
    gathered relation is nested again (lower.fans_out) it is a bag per junction, and the
    first n of it in some order is exactly the question ("their three most recent orders")
    that a flat result cannot ask.
    """
    path: object                 # a TypeSpec, or a Seq/Step -- verb-led, or ending in a verb
    name: Optional[str] = None   # AS
    via: Optional[str] = None    # VIA: a variable bound in the base path; default its head
    ordering: List["OrderItem"] = field(default_factory=list)
    limit: Optional["Limit"] = None
    # `THE PREVIOUS x BY t WITHIN g` -- the key the window is ordered by. Only the row-relative
    # functions carry one: a SUM does not care what order its bag was in, and a LAG is nothing
    # without it. conquer-2026 section 11.
    order_key: object = None


@dataclass
class Confluence:
    """Section 6.5: `Q1 [AS a1] [VIA x1], ... EACH P`.

    P is the query; each Qi gathers one more column onto it, joined at xi with a LEFT OUTER
    JOIN (the report's ⟕). This is where ConQuer-92 puts the distinction between a fact you
    *require* -- a traversal in P, which is a natural join over the fact population -- and a
    value you merely want *shown* if it exists. The report's own example: `LIST Budget VIA g,
    Firstname of, Surname given to EACH Person working for Group g part of Department: 'CS'`.
    """
    elements: List["ConfluenceElement"]
    base: object


@dataclass
class Conditional:
    """A scalar `IF c THEN a ELSE b` (conquer-2026.md §4): §6.3's f(P1..Pn) with a boolean
    first argument, distinct from §7.5's bag-valued IF by position -- this one lives where a
    scalar expression does. Emits CASE WHEN."""
    condition: object
    then: object
    otherwise: object


@dataclass
class SubQuery:
    """A whole `(LIST ... ORDERED ... THE FIRST n)` standing where a bag does -- as the operand
    of a set comparator. conquer-2026.md §8: a limit that applies somewhere other than the
    outermost result. The sub-query carries its own ordering and limit into the bag block."""
    query: "Query"


@dataclass
class Query:
    body: object
    projections: List[Tuple[str, object]] = field(default_factory=list)
    ordering: List["OrderItem"] = field(default_factory=list)
    limit: Optional["Limit"] = None
    # `THE PREVIOUS x BY t WITHIN g` -- the key the window is ordered by. Only the row-relative
    # functions carry one: a SUM does not care what order its bag was in, and a LAG is nothing
    # without it. conquer-2026 section 11.
    order_key: object = None


# --------------------------------------------------------------------------- keywords

FR_SET = {"AND ALSO": "and", "OR OTHERWISE": "or", "BUT NOT": "butnot"}
SET_OP = {"UNITED WITH": "union", "INTERSECTED WITH": "intersect", "MINUS": "except"}
# Section 6.2's underlined comparators: filter the heads of P by how P's tails sit against
# Q's heads. Each keeps its keyword so section 8 verbalisation can read it back.
SET_CMP = {"WHICH ARE ALL IN": "subset", "THAT INCLUDES ALL": "superset",
           "MATCHING ALL": "match",
           # Section 6.4/7.5's SetComp: a comparison of two whole head sets. Same machinery,
           # uncorrelated bags. `EXCLUDES` and `IS DISJOINT FROM` are the PLAIN circled-times;
           # `MISSING`/`EXCLUDING` are the underlined one, a path operator (see UNLOWERED).
           "IS A PROPER SUBSET OF": "properSubset", "IS A SUBSET OF": "subset",
           "IS A PROPER SUPERSET OF": "properSuperset", "IS A SUPERSET OF": "superset",
           "EQUALS": "match", "IS DISJOINT FROM": "disjoint", "EXCLUDES": "disjoint",
           "DOES NOT EQUAL": "match"}

# The grammar spells `DOES NOT EQUAL` as its own set comparator, but the CCM's SetOp has no
# negated match (model.md section 6.4), so it lowers as `not (P match Q)`.
SET_CMP_NEGATED = {"DOES NOT EQUAL"}

# In the grammar, parse, and refuse with the reason rather than silently meaning something
# else. Each maps to a construct the CCM can hold but the lowering does not build yet.
UNLOWERED = {
    "MISSING": "the complement-of-concatenation path operator of section 6.2",
    "EXCLUDING": "the complement-of-concatenation path operator of section 6.2",
    "THE REVERSE OF": "path reversal (section 6.1)",
    "WITH": "the cartesian product of two paths (section 6.2)",
    "THE PATH FROM": "the path shuffle / projection operator (section 6.2)",
    # B.2 <selection>, rules [P36]-[P38]: a descriptor chosen by a condition. Both the
    # `IF c THEN d ELSE d` form and the `d IF c; d IF c OTHERWISE d` alternatives sequence
    # branch on which *bag* is returned, so neither is a SQL CASE expression.
    "IF": "section 7.5's conditional descriptor, IF <condition> THEN ... [ELSE ...]",
    "OTHERWISE": "the alternatives sequence of section 7.5, ... IF ...; ... OTHERWISE ...",
}

VALUE_CMP = {"IS EQUAL TO": "=", "IS NOT EQUAL TO": "<>", "IS LESS THAN OR EQUAL TO": "<=",
             "IS LESS THAN": "<", "IS GREATER THAN OR EQUAL TO": ">=",
             "IS GREATER THAN": ">", "=": "=", "<>": "<>", "!=": "<>",
             "<=": "<=", ">=": ">=", "<": "<", ">": ">"}
# `THE LIST OF` is the one group function whose result is a bag rather than a scalar: it
# gathers what the path reaches into a nested relation instead of reducing it. §6.6 does not
# have it because SQL-92 could not return one -- the same sentence in §6.5 that made
# confluence flat -- and it is what makes "each department and its staff" one row per
# department. It is also the normal form a nested confluence element reads back as.
AGGREGATES = {"THE COUNT OF": ("count", False), "THE DISTINCT COUNT OF": ("count", True),
              "THE SUM OF": ("sum", False), "THE DISTINCT SUM OF": ("sum", True),
              "THE MINIMUM": ("min", False), "THE MAXIMUM": ("max", False),
              "THE AVERAGE": ("avg", False),
              # The middle value, not the mean. A benchmark writer asked for one, could not
              # say it, and reported THE AVERAGE instead -- 0.4485 where the median is 0.4097
              # (finding 99). Whether the model *has* `fn.median` is the dialect's business:
              # DuckDB and PostgreSQL do, and a model built for SQLite leaves it out, so
              # naming it there fails in lowering rather than emitting SQL no engine will run.
              "THE MEDIAN OF": ("median", False), "THE MEDIAN": ("median", False),
              # Dispersion, on the same terms as the median: the dialect decides whether the
              # model carries it. A writer needing a standard deviation built one out of
              # three other aggregates -- `sqrt((avg(a*a) - avg(a)^2) * n/(n-1))` -- which is
              # correct, and is the sort of thing a query language exists to not make people
              # do (finding 148).
              "THE STANDARD DEVIATION OF": ("stddev", False),
              "THE STANDARD DEVIATION": ("stddev", False),
              "THE STDDEV OF": ("stddev", False), "THE STDDEV": ("stddev", False),
              "THE VARIANCE OF": ("variance", False), "THE VARIANCE": ("variance", False),
              # Row-relative: what a row is against the other rows of its partition, which no
              # aggregate can say. Both are window-only -- `GROUPED BY` returns one row per
              # group and there is nothing left to be relative to.
              "THE RANK OF": ("rank", False), "THE PREVIOUS": ("lag", False),
              # Where a row stands as a fraction of its partition: (rank - 1) / (rows - 1),
              # the PERCENT_RANK every knowledge base here means by "percentile ranking".
              "THE PERCENT RANK OF": ("percent_rank", False),
              "THE LIST OF": ("list", False), "THE DISTINCT LIST OF": ("list", True),
              # A document keyed by a value: `THE OBJECT OF v BY k` is {k: v, ...}. The one
              # gathering shape THE LIST OF could not spell (LiveSQLBench alien_5).
              "THE OBJECT OF": ("object", False)}
LOGIC = {"AND": "and", "OR": "or", "EXCLUSIVE OR": "xor", "IMPLIES": "implies",
         "IFF": "iff", "&": "and", "|": "or", "||": "xor", "=>": "implies", "<=>": "iff"}

# Longest first, so "AND ALSO" wins over "AND" and "IS LESS THAN OR EQUAL TO" over "IS LESS THAN".
# The same set, unordered, is what a schema-derived verb part may not be (Lexicon._add_verb).
PHRASES = sorted(
    set(FR_SET) | set(SET_OP) | set(SET_CMP) | set(VALUE_CMP) | set(AGGREGATES) | set(LOGIC)
    | set(UNLOWERED)
    | {"LIST", "FROM", "WHERE", "NOT", "SOME", "DISTINCT", "ONLY", "ORDERED WITH", "ORDERED",
       "ASCENDING", "DESCENDING", "GROUPED BY", "WITHIN", "EACH", "AS", "VIA", "OPTIONALLY",
       "SEPARATED BY",
       "THE FIRST", "THE TOP", "AFTER", "THEN", "ELSE", "PER", "WITH TIES", "DEFINE",
       "THE", "A", "AN", "AND"},
    key=lambda p: (-len(p.split()), -len(p)))
KEYWORD_PHRASES = frozenset(PHRASES)

NOISE = {"A", "AN", "EACH"}          # articles the report's examples use freely

# An article cannot meaningfully follow a type specification, so it must not block a
# variable of the same name: `has EmployeeSalary a` names a variable, not an article.
NAMEABLE_BLOCKERS = [p for p in PHRASES if p.upper() not in NOISE]

_PHRASE_ORDER = {}                   # keyword tuple -> longest-first order, built once


# --------------------------------------------------------------------------- tokens

@dataclass
class Token:
    kind: str          # word | string | number | punct | phrase
    text: str
    pos: int


_TOKEN_RE = re.compile(r"""
    (?P<string>'(?:[^']|'')*'|"(?:[^"]|"")*")
  | (?P<number>\d+(?:\.\d+)?(?:[eE][+-]?\d+)?)
  | (?P<punct><=>|<=|>=|<>|!=|\|\||=>|[()\[\],:!<>=&|+\-*/.^])
  | (?P<word>[A-Za-z_][A-Za-z0-9_]*)
  | (?P<space>\s+)
""", re.VERBOSE)


def _tidy(tokens) -> str:
    """Tokens back into text a reader would write: `round(s / 1000, 1)`, not
    `round ( s / 1000 , 1 )`. A listed expression is named by its text, and the spaced
    form was every writer's column header."""
    out, prev = "", ""
    for tok in tokens:
        # `(` sticks to a function name -- lowercase, as every library function is spelled
        # -- and not to a keyword: `round(`, `starts_with(`, but `WHERE (` and `IN (`.
        call = tok == "(" and prev[:1].isalpha() and prev.islower()
        if out and tok not in (",", ")") and not out.endswith("(") and not call:
            out += " "
        out += tok
        prev = tok
    return out


def tokenize(text: str) -> List[Token]:
    out, i = [], 0
    while i < len(text):
        m = _TOKEN_RE.match(text, i)
        if not m:
            raise ParseError("unexpected character %r at %d" % (text[i], i))
        i = m.end()
        if m.lastgroup == "space":
            continue
        if m.lastgroup == "string":
            body = m.group()[1:-1].replace("''", "'").replace('""', '"')
            out.append(Token("string", body, m.start()))
        elif m.lastgroup == "number":
            out.append(Token("number", m.group(), m.start()))
        elif m.lastgroup == "punct":
            out.append(Token("punct", m.group(), m.start()))
        else:
            out.append(Token("word", m.group(), m.start()))
    return out


# --------------------------------------------------------------------------- lexicon

class Lexicon(Index):
    """What the parser needs on top of the shared model index: the verb vocabulary.

    A verb part comes from a reading -- "{0} has {1}" contributes "has" stepping from
    roleSequence[0] to roleSequence[1]. Readings are ORM's spelling of ConQuer's mix-fix
    MFix, so this is the report's own construction; Index.reading_slots does the splitting.
    """

    def __init__(self, model: dict):
        super().__init__(model)

        # verb part -> [(fact id, from role, to role)]. A reading's hyphen-bound adjective
        # (`has manager- {1}`) is part of the verb part here: `has manager`.
        self.verbs: dict = {}
        self.shadowed: set = set()        # verb parts a keyword outranks; see _add_verb
        for c in model["concepts"]:
            if c["kind"] != "fact":
                continue
            for verb, a, b in self.reading_slots(c):
                self._add_verb(verb.casefold(), (c["id"], a, b))
                inverse = self._inverse_of(verb)
                if inverse:
                    self._add_verb(inverse, (c["id"], b, a))
        self.verb_phrases = sorted(self.verbs, key=lambda v: (-len(v.split()), -len(v)))
        # Unary readings, recorded but never registered as verb parts. A unary fact type is a
        # set -- there is no second role to walk to -- so no path can use it, and the model's
        # own listing now says so. Kept here only so that a writer who tries anyway is told
        # what they hit instead of "'is' is neither a type in this schema" (finding 135).
        self.unary: dict = {}
        for c in model["concepts"]:
            if c["kind"] == "fact" and len(c.get("roles", [])) == 1:
                for r in c.get("readings", []):
                    text = re.sub(r"\{\d+\}", "", r.get("text", "")).strip()
                    if text:
                        self.unary.setdefault(text.casefold(), c["name"])

        # Section 6.9's Macros function: name -> (parameters, kind, body text)
        self.macros: dict = {m["name"].casefold(): m for m in model.get("macros", [])}

        # Appendix B.2's <role reference>: a role may be named directly. On a ring fact type
        # -- both roles played by one object type -- whose only reading is the placeholder
        # `{0} has {1}`, it is the one way to say which role is meant; a ring with a reading
        # of its own (`is connected to`, `has manager-`) says so by the verb.
        self.role_names: dict = {}
        for rid, r in self.roles.items():
            if r.get("name"):
                self.role_names.setdefault(r["name"].casefold(), []).append(rid)

        # Derived fact types carry the keys their rules imply. A rule that lists one row
        # per head is functional whether or not the model wrote the constraint down, and
        # the fan-out check and section 14b both need to know. Costs nothing for a model
        # without rules; for one with them, a parse of each rule once per lexicon.
        if model.get("derivationRules") and model.get("constraints"):
            import lower                                   # lazily: lower imports this module
            lower.declare_derived_keys(model, self)

    def _add_verb(self, verb: str, entry: tuple):
        # A schema may not shadow the language. Reverse engineering reads an n-ary table as
        # `{0} has {1} and {2}`, which contributes "and" as the verb part between slots 1 and
        # 2 -- and then `... has RaceName v AND ALSO ...` consumed the AND as a step and
        # refused at ALSO, on every f1 query, because a verb was tried before a keyword.
        # Appendix B.2's role reference is how such a role is walked: `Drive Constructor`.
        if verb.upper() in KEYWORD_PHRASES:
            self.shadowed.add(verb)
            return
        entries = self.verbs.setdefault(verb, [])
        if entry not in entries:            # an explicit inverse reading and a derived one
            entries.append(entry)

    @staticmethod
    def _inverse_of(verb: str) -> Optional[str]:
        # A stopgap: reverse engineering emits one reading per fact type, never the inverse
        # reading order ORM normally carries, so a path can only be walked one way. Emitting
        # both orders in reverse/derive.py would remove this.
        #
        # A reading whose verb carries a bound adjective (rule 10: `has eye`, `has fifa api`)
        # needs the adjective in its inverse too, or two fact types between the same pair of
        # types become indistinguishable again going backwards -- which is how
        # `Player is of PlayerAttribute` came to have no reading at all.
        v = " ".join(verb.split()).casefold()
        if v in ("has", "have"):
            return "is of"
        for lead in ("has ", "have "):
            if v.startswith(lead):
                return "is %s of" % v[len(lead):]
        return None


# --------------------------------------------------------------------------- parser

class Parser:
    def __init__(self, lexicon: Lexicon, text: str):
        self.lex = lexicon
        self.expanded_macros: List[Tuple[str, str]] = []   # (invocation, expansion) for --explain
        self._expanding: List[str] = []
        self.text = text
        self.toks = tokenize(text)
        self.i = 0
        self.declared = set()          # variables bound earlier in this query text
        self.forward_refs = False      # inside LIST, a name may be bound later in the path

    # -- token helpers -----------------------------------------------------

    def eof(self) -> bool:
        return self.i >= len(self.toks)

    def peek(self, k=0) -> Optional[Token]:
        return self.toks[self.i + k] if self.i + k < len(self.toks) else None

    def match_phrase(self, phrases) -> Optional[str]:
        """Longest phrase match at the cursor, over multi-word keyword phrases."""
        for phrase in phrases:
            words = phrase.split()
            if all(self.peek(n) is not None
                   and self.peek(n).text.casefold() == w.casefold()
                   and self.peek(n).kind in ("word", "punct")
                   for n, w in enumerate(words)):
                self.i += len(words)
                return phrase
        return None
